# IAPV

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Aulas/Lab/lab1/: Lab1_Apple_Diogo.blend
Aulas/Lab/lab3/: lab3_human_Diogo.blend
Aulas/Lab/lab6/: IAPV_REYNOLDS_BOIDS_SYSTEM.ipynb  IAPV_Social_Force_Model.ipynb
Aulas/Project/: ProjectPombo.blend  ProjectPombo.blend1  ProjectPomboTeste.blend  ProjectPomboTeste.blend1  ProjectPomboWings.blend  ProjectPomboWings.blend1
Aulas/game/: elira_memory.json  elira_memory_rpg.json  iapv_game_llm.py  requirements.txt
Lab/lab2/: Lab2_table_Diogo.blend
demos/: CMakeLists.txt  console_demo.cpp  visual_demo.py
notebooks/: 01_Basic_Concepts.ipynb
src/cpp/: CMakeLists.txt
src/cpp/common/: agent.hpp  math_utils.cpp  math_utils.hpp
src/cpp/communication/: messaging.cpp  messaging.hpp
src/cpp/crowds/: flocking.cpp  flocking.hpp
src/cpp/decision_making/: state_machine.cpp  state_machine.hpp
src/cpp/learning/: neural_networks.cpp  neural_networks.hpp
src/cpp/locomotion/: steering_behaviors.cpp  steering_behaviors.hpp
src/cpp/planning/: pathfinding.cpp  pathfinding.hpp
src/cpp/teamwork/: coordination.hpp
src/python/: __init__.py
src/python/common/: math_utils.py
src/python/locomotion/: steering_behaviors.py
src/python/planning/: pathfinding.py
